--- a/index.html
+++ b/index.html
@@ -22,11 +22,9 @@
     <!-- Tweaks for older IEs--><!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
-    <!-- onepage scroll stylesheet-->
-    <link rel="stylesheet" href="css/onepage-scroll.css">
   </head>
   <body>
-    <section id="page1" class="text-intro no-padding-bottom">
+    <section id="intro" class="text-intro no-padding-bottom">
       <div class="container">
         <div class="row">
           <div class="col-md-12 col-lg-10">
@@ -36,7 +34,7 @@
       </div>
     </section>
     <!-- portfolio-->
-    <section id="page2" class="no-padding-bottom"> 
+    <section id="portfolio" class="no-padding-bottom"> 
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -74,7 +72,7 @@
         </div>
       </div>
     </section>
-    <section id="page3" class="section">
+    <section id="about" class="section">
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
@@ -125,7 +123,32 @@
         </div>
       </div>
     </section>
-    <section id="page4">
+    <!--   *** CUSTOMERS ***-->
+    <section id="customers" class="section background-gray-lightest">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4 col-md-2 col-xs-6">
+            <div class="customer"><img src="img/customers/kofola.png" title="Kofola" data-placement="bottom" data-toggle="tooltip" alt="" class="img-responsive"></div>
+          </div>
+          <div class="col-sm-4 col-md-2 col-xs-6">
+            <div class="customer"><img src="img/customers/evian.png" title="Evian" data-placement="bottom" data-toggle="tooltip" alt="" class="img-responsive"></div>
+          </div>
+          <div class="col-sm-4 col-md-2 col-xs-6">
+            <div class="customer"><img src="img/customers/cslink.png" title="CS Link" data-placement="bottom" data-toggle="tooltip" alt="" class="img-responsive"></div>
+          </div>
+          <div class="col-sm-4 col-md-2 col-xs-6">
+            <div class="customer"><img src="img/customers/botas66.png" title="Botas 66 Concept store" data-placement="bottom" data-toggle="tooltip" alt="" class="img-responsive"></div>
+          </div>
+          <div class="col-sm-4 col-md-2 col-xs-6">
+            <div class="customer"><img src="img/customers/mdfc.png" title="MediaFabríca" data-placement="bottom" data-toggle="tooltip" alt="" class="img-responsive"></div>
+          </div>
+          <div class="col-sm-4 col-md-2 col-xs-6">
+            <div class="customer"><img src="img/customers/vanek.png" title="VANĚK Strojírenská výroba" data-placement="bottom" data-toggle="tooltip" alt="" class="img-responsive"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="contact">
       <div class="container clearfix">
         <div class="row">
           <div class="col-md-12">
@@ -190,7 +213,6 @@
       </div>
     </footer>
     <!-- Javascript files-->
-    <script src="js/jquery.onepage-scroll.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/jquery-1.11.0.min.js"><\/script>')</script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
