--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <link rel="shortcut icon" href="favicon.png">
     <!-- onepage scroll -->
     <link rel="stylesheet" href="css/onepage-scroll.css">
+    <!-- font-awesome-animation -->
+    <link rel="stylesheet" href="css/font-awesome-animation.min.css">
     <!-- Tweaks for older IEs--><!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
@@ -37,6 +39,7 @@
               </div>
             </div>
           </div>
+          <div class="icon faa-float animated"><i class="fa fa-angle-double-down fa-2x"></i></div>
         </section>
         <!-- portfolio-->
         <section id="page2" class="no-padding-bottom"> 
