--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 
   <body>
     
-      <div class="main">  
+      <div class="main">
+        <!-- intro -->
         <section id="page1" class="text-intro no-padding-bottom">
           <div class="container">
             <div class="row">
@@ -80,12 +81,12 @@
             </div>
           </div>
         </section>
-
+        <!-- about me -->
         <section id="page3" class="section">
           <div class="container">
             <div class="row">
               <div class="col-sm-12">
-                <h2 class="heading">About me</h2>
+                <h2 class="heading">What I can do.</h2>
               </div>
               <div class="col-sm-12">
                 <div class="row">
@@ -132,7 +133,7 @@
             </div>
           </div>
         </section>
-        
+        <!-- contact me -->
         <section id="page4">
           <div class="container clearfix">
             <div class="row">
