--- a/index.html
+++ b/index.html
@@ -29,26 +29,25 @@
   </head>
 
   <body>
-    
+
       <div class="main">
         <!-- intro -->
         <section id="page1" class="text-intro no-padding-bottom">
           <div class="container">
             <div class="row">
               <div class="col-md-12 col-lg-10">
-                <h1>Hello.<br />I'm <span class="text-primary">Asyraaf Azahari</span>, a graphic and web <span class="text-primary">designer</span> living in Batu Caves, Malaysia</h1>
+                <h1>Hello.<br />I'm <span class="text-primary">Asyraaf Azahari</span>, a graphic and web <span class="text-primary">designer</span> based in Malaysia</h1>
               </div>
             </div>
           </div>
           <div class="icon faa-float animated"><i class="fa fa-angle-double-down fa-2x"></i></div>
         </section>
         <!-- portfolio-->
-        <section id="page2" class="no-padding-bottom"> 
+        <section id="page2" class="no-padding-bottom">
           <div class="container">
             <div class="row">
               <div class="col-md-12">
-                <h2 class="heading">Selected works</h2>
-                <p class="lead margin-bottom--big">You can make also image gallery with this section easily. </p>
+                <h2 class="heading" style="margin-top:-6%;">Selected works</h2>
               </div>
             </div>
           </div>
@@ -86,10 +85,10 @@
           <div class="container">
             <div class="row">
               <div class="col-sm-12">
-                <h2 class="heading">What I can do.</h2>
+                <h2 class="heading" style="margin-top:-35%;">What I can <span class="text-primary">do</span>.</h2>
               </div>
               <div class="col-sm-12">
-                <div class="row">
+                <div class="row" style="margin-top:-25%;">
                   <div class="col-sm-6 text-left">
                     <p>An sincerity so extremity he additions. Her yet <strong>there truth merit</strong>. Mrs all projecting favourable now unpleasing. Son law garden chatty temper. Oh children provided to mr elegance marriage strongly. Off can admiration prosperous now devonshire diminution law.</p>
                     <p><img src="img/about.jpg" alt="This is me" class="image img-circle img-responsive"></p>
@@ -136,7 +135,7 @@
         <!-- contact me -->
         <section id="page4">
           <div class="container clearfix">
-            <div class="row">
+            <div class="row" style="margin-top:-45%;">
               <div class="col-md-12">
                 <h2 class="heading">Contact</h2>
                 <div class="row">
@@ -181,7 +180,7 @@
             </div>
           </div>
         </section>
-      </div>  
+      </div>
       <!-- <footer class="footer">
         <div class="footer__copyright">
           <div class="container">
@@ -197,7 +196,7 @@
           </div>
         </div>
       </footer> -->
-    
+
     <!-- Javascript files-->
     <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/jquery-1.11.0.min.js"><\/script>')</script>-->
