--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               <div class="col-sm-12">
                 <div class="row" style="margin-top:-25%;">
                   <div class="col-sm-6 text-left">
-                    <p>I have a passion and love to <span class="text-primary">design</span> incredibly awesome things, the more complex the issue, the more fun to resolve it and keep simple. My goals are to focus on UX part which to achieve humanity!!</p>
+                    <p>I have a passion and love to <span class="text-primary">design</span> incredibly awesome things, the more complex the issue, the more fun to resolve it with simple way by using my UX skills start from research, ideation until build prototype process. I don't mind if we do many time user testing or  experiment because I believe it's sake for good ux practises.</p>
                     <p style="text-align:center;"><img src="img/about.jpg" alt="This is me" class="image img-circle img-responsive"> This is <span class="text-primary">me</span>.</p>
                   </div>
                   <div class="col-sm-6">
@@ -104,37 +104,49 @@
                      I can say i’m quite good at
                     </p>
                     <div class="skill-item">
-                      <div class="progress-title">PHP/Laravel</div>
-                      <div class="progress" style="margin-bottom:0;">
-                        <div role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100" style="width: 55%;" class="progress-bar progress-bar-skill1"><span class="sr-only">55</span></div>
+                      <div class="progress-title">Adobe Illustrator/Photoshop</div>
+                      <div class="progress" style="margin-bottom:0;" >
+                        <div role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;" class="progress-bar progress-bar-skill1"><span class="sr-only">55</span></div>
                         </div>
                         <p style="font-size:75%;">
-                         I can do 50% front-end part and just 5% for back-end.
+                         Daily use. I can do wireframe, cool mockup, svg assets?, UI assets
                         </p>
                     </div>
                     <div class="skill-item">
-                      <div class="progress-title">Javascript</div>
-                      <div class="progress">
-                        <div role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;" class="progress-bar progress-bar-skill2"><span class="sr-only">70</span></div>
+                      <div class="progress-title">HTML and CSS</div>
+                      <div class="progress" style="margin-bottom:0;">
+                        <div role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;" class="progress-bar progress-bar-skill2"><span class="sr-only">70</span></div>
                       </div>
+                      <p style="font-size:75%;">
+                       Pixelperfect makeup. SASS and LESS still in learning progress.
+                      </p>
                     </div>
                     <div class="skill-item">
-                      <div class="progress-title">HTML coding</div>
-                      <div class="progress">
-                        <div role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;" class="progress-bar progress-bar-skill3"><span class="sr-only">80</span></div>
+                      <div class="progress-title">GIT</div>
+                      <div class="progress" style="margin-bottom:0;">
+                        <div role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;" class="progress-bar progress-bar-skill3"><span class="sr-only">80</span></div>
                       </div>
+                      <p style="font-size:75%;">
+                       I believe work as team, this skill very helpful and usefull esp work in agile.
+                      </p>
                     </div>
                     <div class="skill-item">
-                      <div class="progress-title">SEO</div>
-                      <div class="progress">
-                        <div role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;" class="progress-bar progress-bar-skill4"><span class="sr-only">90</span></div>
+                      <div class="progress-title">JAVASCRIPT(Angular, jQuery)</div>
+                      <div class="progress" style="margin-bottom:0;">
+                        <div role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;" class="progress-bar progress-bar-skill4"><span class="sr-only">90</span></div>
                       </div>
+                      <p style="font-size:75%;">
+                       Better day by day
+                      </p>
                     </div>
                     <div class="skill-item">
-                      <div class="progress-title">SEM</div>
-                      <div class="progress">
-                        <div role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;" class="progress-bar progress-bar-skill5"><span class="sr-only">70</span></div>
+                      <div class="progress-title">PHP(Laravel)</div>
+                      <div class="progress" style="margin-bottom:0;">
+                        <div role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100" style="width: 55%;" class="progress-bar progress-bar-skill5"><span class="sr-only">70</span></div>
                       </div>
+                      <p style="font-size:75%;">
+                       50% I can do front-end part, another 5% just back-end only.
+                      </p>
                     </div>
                   </div>
                 </div>
@@ -151,40 +163,7 @@
                 <h2 class="heading">GET IN TOUCH</h2>
                 <div class="row">
                   <div class="col-md-6">
-                    <form id="contact-form" method="post" action="contact.php" class="contact-form form">
-                      <div class="controls">
-                        <div class="row">
-                          <div class="col-sm-6">
-                            <div class="form-group">
-                              <label for="name">Your firstname *</label>
-                              <input type="text" name="name" id="name" placeholder="Enter your firstname" required="required" class="form-control">
-                            </div>
-                          </div>
-                          <div class="col-sm-6">
-                            <div class="form-group">
-                              <label for="surname">Your lastname *</label>
-                              <input type="text" name="surname" id="surname" placeholder="Enter your  lastname" required="required" class="form-control">
-                            </div>
-                          </div>
-                        </div>
-                        <div class="form-group">
-                          <label for="email">Your email *</label>
-                          <input type="email" name="email" id="email" placeholder="Enter your  email" required="required" class="form-control">
-                        </div>
-                        <div class="form-group">
-                          <label for="message">Your message for us *</label>
-                          <textarea rows="4" name="message" id="message" placeholder="Enter your message" required="required" class="form-control"></textarea>
-                        </div>
-                        <div class="text-center">
-                          <input type="submit" value="Send message" class="btn btn-primary btn-block">
-                        </div>
-                      </div>
-                    </form>
-                  </div>
-                  <div class="col-md-6">
-                    <p>Effects present letters inquiry no an removed or friends. Desire behind latter me though in. Supposing shameless am he engrossed up additions. My possible peculiar together to. Desire so better am cannot he up before points. Remember mistaken opinions it pleasure of debating. Court front maids forty if aware their at. Chicken use are pressed removed. </p>
-                    <p>Able an hope of body. Any nay shyness article matters own removal nothing his forming. Gay own additions education satisfied the perpetual. If he cause manor happy. Without farther she exposed saw man led. Along on happy could cease green oh. </p>
-                    <p class="social"><a href="#" title="" class="facebook"><i class="fa fa-facebook"></i></a><a href="#" title="" class="twitter"><i class="fa fa-twitter"></i></a><a href="#" title="" class="gplus"><i class="fa fa-google-plus"></i></a><a href="#" title="" class="instagram"><i class="fa fa-instagram"></i></a><a href="#" title="" class="email"><i class="fa fa-envelope"></i></a></p>
+
                   </div>
                 </div>
               </div>
