--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
               <div class="col-sm-12">
                 <div class="row" style="margin-top:-25%;">
                   <div class="col-sm-6 text-left">
-                    <p>I have a passion and love to <span class="text-primary">design</span> incredibly awesome things, the more complex the issue, the more fun to resolve it with simple way by using my UX skills start from research, ideation until build prototype process. I don't mind if we do many time user testing or  experiment because I believe it's sake for good ux practises.</p>
+                    <p>I have passion to <span class="text-primary">design</span> incredible and amazing things. If the issue is more complex, then it doubles the fun for me to resolve it through my competent UX skill.  Starting from research and ideation until building prototype process. I don't mind if we redo user testing or experiment numerously because I believe it is for the good sake of UX practices.
+                    </p>
                     <p style="text-align:center;"><img src="img/about.jpg" alt="This is me" class="image img-circle img-responsive"> This is <span class="text-primary">me</span>.</p>
                   </div>
                   <div class="col-sm-6">
