--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
           <div class="container-fluid">
             <div class="row no-space">
               <div class="col-sm-4 col-md-4">
-                <div class="box"><a href="img/portfolio/paper-presentation.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Name of the work 1" data-footer="Description of Project No.1"><img src="img/portfolio/paper-presentation.jpg" alt="" class="img-responsive"></a></div>
+                <div class="box"><a href="img/portfolio/3-02.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Name of the work 1" data-footer="Description of Project No.1"><img src="img/portfolio/3-02.jpg" alt="" class="img-responsive"></a></div>
               </div>
               <div class="col-sm-4 col-md-4">
-                <div class="box"><a href="img/portfolio/business-card-26.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Name of the work 2" data-footer="Fifth abundantly made Give sixth hath. Cattle creature i be don't them."><img src="img/portfolio/business-card-26.jpg" alt="" class="img-responsive"></a></div>
+                <div class="box"><a href="img/portfolio/3-01.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Name of the work 2" data-footer="Fifth abundantly made Give sixth hath. Cattle creature i be don't them."><img src="img/portfolio/3-01.jpg" alt="" class="img-responsive"></a></div>
               </div>
               <div class="col-sm-4 col-md-4">
-                <div class="box"><a href="img/portfolio/gravity-paper.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Name of the work 3" data-footer="Fifth abundantly made Give sixth hath. Cattle creature i be don't them."><img src="img/portfolio/gravity-paper.jpg" alt="" class="img-responsive"></a></div>
+                <div class="box"><a href="img/portfolio/3-03.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Name of the work 3" data-footer="Fifth abundantly made Give sixth hath. Cattle creature i be don't them."><img src="img/portfolio/3-03.jpg" alt="" class="img-responsive"></a></div>
               </div>
             </div>
           </div>
@@ -97,7 +97,7 @@
                         <div role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;" class="progress-bar progress-bar-skill1"><span class="sr-only">55</span></div>
                         </div>
                         <p style="font-size:75%;">
-                         Daily use. I can do wireframe, cool mockup, svg assets?, UI assets
+                         Everyday use. Wireframe, cool mockup, svg UI icon assets and product design.
                         </p>
                     </div>
                     <div class="skill-item">
@@ -115,7 +115,7 @@
                         <div role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;" class="progress-bar progress-bar-skill3"><span class="sr-only">80</span></div>
                       </div>
                       <p style="font-size:75%;">
-                       I believe work as team, this skill very helpful and usefull esp work in agile.
+                       I believe when work as a team, this skill very helpful and usefull esp working in agile mode.
                       </p>
                     </div>
                     <div class="skill-item">
