--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                   <div class="col-sm-6">
                     <h3 style="margin-bottom:0;">TECHNICAL SKILLS</h3>
                     <p>
-                     I can say i’m quite good at
+                     Actualy I can say i’m quite good at
                     </p>
                     <div class="skill-item">
                       <div class="progress-title">Adobe Illustrator/Photoshop</div>
@@ -201,12 +201,13 @@
     <script>
       $(".main").onepage_scroll();
 
-      // (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-      // function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-      // e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-      // e.src='//www.google-analytics.com/analytics.js';
-      // r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      // ga('create','UA-XXXXX-X');ga('send','pageview');
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-82192793-1', 'auto');
+      ga('send', 'pageview');
     </script>
   </body>
 </html>
