--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Favicon-->
     <link rel="shortcut icon" href="favicon.png">
     <!-- onepage scroll -->
-    <link rel="stylesheet" href="css/onepage-scroll.css">
+    <!-- <link rel="stylesheet" href="css/onepage-scroll.css"> -->
     <!-- font-awesome-animation -->
     <link rel="stylesheet" href="css/font-awesome-animation.min.css">
     <!-- Tweaks for older IEs--><!--[if lt IE 9]>
@@ -37,11 +37,11 @@
         <section id="page1" class="text-intro no-padding-bottom">
           <div class="container">
             <div class="row">
-              <div class="col-md-8 col-lg-8">
+              <div class="col-xs-8 col-sm-8 col-lg-8">
                 <h1>Hello.<br />I'm <span class="text-primary">Asyraaf Azahari</span>, a graphic and web <span class="text-primary">designer</span> based in Malaysia</h1>
 
               </div>
-              <div class="col-md-4 col-lg-4">
+              <div class="col-sm-4 col-lg-4">
                 <img src="img/meflat.svg" height="90%" width="90%" style="padding-top:10%;"/>
               </div>
             </div>
@@ -195,11 +195,11 @@
     <script src="js/jquery.cookie.js"> </script>
     <script src="js/ekko-lightbox.js"></script>
     <script src="js/front.js"></script>
-    <script src="js/jquery.onepage-scroll.js"></script>
+    <!-- <script src="js/jquery.onepage-scroll.js"></script> -->
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID.-->
     <!---->
     <script>
-      $(".main").onepage_scroll();
+      // $(".main").onepage_scroll();
 
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
