--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
   <meta name="robots" content="all,follow">
 
   <link rel="shortcut icon" href="favicon.png">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,700,800,400italic">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,700,800,400italic">
   <link rel="stylesheet" href="css/bootstrap.css" media="screen" title="no title">
   <!-- <link rel="stylesheet" href="css/onepage-scroll.css" media="screen" title="no title"> -->
   <link rel="stylesheet" href="css/master.css" media="screen" title="no title">
@@ -17,7 +17,7 @@
  <body>
   <div class="main">
 
-   <section id="page1" class="text-intro">
+  <section id="page1" class="text-intro">
     <div class="container">
      <div class="row">
       <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
@@ -28,9 +28,9 @@
       </div>
      </div>
     </div>
-   </section>
+  </section>
 
-   <section id="page2">
+  <section id="page2">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -56,13 +56,25 @@
 
 
     </div>
-   </section>
+  </section>
+
+  <section id="page3">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h2 class="heading">Selected works</h2>
+        </div> 
+      </div>
+    </div>
+  </section>
 
   </div>
 
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <script src="js/jquery.min.js"></script>
   <script src="js/ekko-lightbox.js"></script>
+  <script src="js/front.js"></script>
+  <script type="text/javascript" src="js/bootstrap.js"></script>
   <!-- <script src="js/jquery.onepage-scroll.js"></script>
   <script>
    $(".main").onepage_scroll();
