--- a/asyraaf/index2.html
+++ b/asyraaf/index2.html
@@ -6,9 +6,24 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>percubaan</title>
+  <link rel="stylesheet" href="css/foundation.css">
   <link rel="stylesheet" href="css/app.css">
  </head>
  <body>
+  <section>
+   <div class="row align-center">
+    <div class="small-12 medium-8 large-8 columns align-middle align-self-middle">
+     <h1>Hello.<br />I'm <span class="text-primary">Asyraaf Azahari</span>, a graphic and web <span class="text-primary">designer</span> based in Malaysia</h1>
+    </div>
+    <div class="small-12 medium-4 large-4 columns">
+     <img src="../img/meflat.svg" alt="" />
+    </div>
+   </div>
+  </section>
 
+  <script src="js/vendor/jquery.js"></script>
+  <script src="js/vendor/what-input.js"></script>
+  <script src="js/vendor/foundation.js"></script>
+  <script src="js/app.js"></script>
  </body>
 </html>
